# BlackBox-Lens-CLI-Dependency-Risk-Scanner-LLM-Summary

./: Dockerfile  README.md  pyproject.toml
blackbox_lens/: cli.py  llm.py  osv_client.py  parsers.py  report.py
