[project]
name = "blackbox-lens"
version = "1.0.0"
description = "BlackBox Lens — dependency risk scanner with optional LLM summaries (Ollama/OpenAI)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12.3",
  "requests>=2.32.0",
]

[project.scripts]
blackbox-lens = "blackbox_lens.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
